// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Grid Container Fluid width container 1`] = `
<div
  className="gc-grid-container GridContainerElement-k7axvl-0 ioYaHu"
  type="fluid"
>
  <div
    className="gc-grid-x XYGridElement-sc-11ht4j5-0 dOWcve"
    wrap={true}
  >
    <div
      className="gc-cell CellElement-o119kl-0 gErIwn"
    >
      cell
    </div>
    <div
      className="gc-cell CellElement-o119kl-0 gErIwn"
    >
      cell
    </div>
    <div
      className="gc-cell CellElement-o119kl-0 gErIwn"
    >
      cell
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Container Full width container 1`] = `
<div
  className="gc-grid-container GridContainerElement-k7axvl-0 kFWHxK"
  type="full"
>
  <div
    className="gc-grid-x XYGridElement-sc-11ht4j5-0 dOWcve"
    wrap={true}
  >
    <div
      className="gc-cell CellElement-o119kl-0 gErIwn"
    >
      cell
    </div>
    <div
      className="gc-cell CellElement-o119kl-0 gErIwn"
    >
      cell
    </div>
    <div
      className="gc-cell CellElement-o119kl-0 gErIwn"
    >
      cell
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Container Width of the available space container 1`] = `
<div
  className="gc-grid-container GridContainerElement-k7axvl-0 hsMPrT"
>
  <div
    className="gc-grid-x XYGridElement-sc-11ht4j5-0 dOWcve"
    wrap={true}
  >
    <div
      className="gc-cell CellElement-o119kl-0 gErIwn"
    >
      cell
    </div>
    <div
      className="gc-cell CellElement-o119kl-0 gErIwn"
    >
      cell
    </div>
    <div
      className="gc-cell CellElement-o119kl-0 gErIwn"
    >
      cell
    </div>
  </div>
</div>
`;
